--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,11 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <title>React App</title>
   </head>
-  <body>
+  <body class="text-center">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
